Upgrade to Spring Boot 2.1.2