@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -30,11 +30,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <maven.test.skip>false</maven.test.skip>
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
-        <dependency-check-maven.version>3.3.4</dependency-check-maven.version>
-        <jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
+        <dependency-check-maven.version>4.0.2</dependency-check-maven.version>
+        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <commons-text.version>1.6</commons-text.version>
         <spring-cloud-sleuth.version>2.0.2.RELEASE</spring-cloud-sleuth.version>
@@ -175,6 +175,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
             <!-- http://www.eclemma.org/jacoco/trunk/doc/maven.html -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -186,10 +195,13 @@
                     <append>true</append>
                     <excludes>
                         <!-- exclude QueryDsl generated artifacts -->
+                        <exclude>io/undertree/symptom/domain/Q*.*</exclude>
+                        <!--
                         <exclude>io/undertree/symptom/domain/QDrugStrength.class</exclude>
                         <exclude>io/undertree/symptom/domain/QMedication.class</exclude>
                         <exclude>io/undertree/symptom/domain/QPatient.class</exclude>
                         <exclude>io/undertree/symptom/domain/QPrescription.class</exclude>
+                        -->
                     </excludes>
                 </configuration>
                 <executions>
